--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -1,27 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DnsClient" version="1.0.7" targetFramework="xamarinios10" />
-  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="MongoDB.Bson" version="2.5.0" targetFramework="xamarinios10" />
   <package id="MongoDB.Driver" version="2.5.0" targetFramework="xamarinios10" />
   <package id="MongoDB.Driver.Core" version="2.5.0" targetFramework="xamarinios10" />
-  <package id="NETStandard.Library" version="1.6.1" targetFramework="xamarinios10" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="xamarinios10" />
+  <package id="NETStandard.Library" version="2.0.1" targetFramework="xamarinios10" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Buffers" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Collections.NonGeneric" version="4.0.1" targetFramework="xamarinios10" />
-  <package id="System.Collections.Specialized" version="4.0.1" targetFramework="xamarinios10" />
-  <package id="System.ComponentModel.TypeConverter" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Collections.Specialized" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Console" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Diagnostics.Process" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.Process" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Diagnostics.TraceSource" version="4.0.0" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.TraceSource" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Dynamic.Runtime" version="4.0.11" targetFramework="xamarinios10" />
+  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Globalization" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Globalization.Extensions" version="4.3.0" targetFramework="xamarinios10" />
@@ -32,17 +33,17 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Linq" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Linq.Queryable" version="4.0.1" targetFramework="xamarinios10" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Linq.Queryable" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="xamarinios10" />
   <package id="System.Net.NameResolution" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.NetworkInformation" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Net.Security" version="4.0.0" targetFramework="xamarinios10" />
+  <package id="System.Net.Security" version="4.3.2" targetFramework="xamarinios10" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Reflection.Emit.ILGeneration" version="4.0.1" targetFramework="xamarinios10" />
-  <package id="System.Reflection.Emit.Lightweight" version="4.0.1" targetFramework="xamarinios10" />
+  <package id="System.Reflection.Emit.ILGeneration" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="xamarinios10" />
@@ -52,11 +53,13 @@
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Security.SecureString" version="4.0.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="xamarinios10" />
+  <package id="System.Security.SecureString" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="xamarinios10" />
@@ -65,6 +68,7 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="Xam.Plugin.Connectivity" version="3.0.2" targetFramework="xamarinios10" />
+  <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="Xam.Plugin.Connectivity" version="3.0.3" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.5.0.121934" targetFramework="xamarinios10" />
 </packages>
